--- a/index.html
+++ b/index.html
@@ -1,12 +1,183 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git rules!</title>
-</head>
-<body>
-    
-</body>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Студия</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <header>
+      <!-- Навигация -->
+      <nav>
+        <!-- лого -->
+        <a class="link logo" href="./index.html" lang="en">
+          Web<span class="logo-nav">Studio</span>
+        </a>
+
+        <!-- ссылки -->
+        <ul class="lists">
+          <li>
+            <a class="link nav-link current" href="./index.html">Студия</a>
+          </li>
+          <li>
+            <a class="link nav-link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li><a class="link nav-link" href="">Контакты</a></li>
+        </ul>
+      </nav>
+
+      <!-- Почта и телефон -->
+      <ul class="lists">
+        <li>
+          <a class="link nav-link nav-contacts" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="link nav-link nav-contacts" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
+      </ul>
+    </header>
+    <main>
+      <!-- Главная секция -->
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения<br />для вашего бизнеса</h1>
+        <button class="btn hero" type="button">Заказать услугу</button>
+      </section>
+
+      <!-- Секция особенности -->
+      <section>
+        <h2 class="heading headen">Особенности</h2>
+        <ul class="lists">
+          <li>
+            <h3 class="title-features">Внимание к деталям</h3>
+            <p class="text">
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+
+          <li>
+            <h3 class="title-features">Пунктуальность</h3>
+            <p class="text">
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+
+          <li>
+            <h3 class="title-features">Планирование</h3>
+            <p class="text">
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+
+          <li>
+            <h3 class="title-features">Современные технологии</h3>
+            <p class="text">
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- Секция работа -->
+      <section>
+        <h2 class="heading">Чем мы занимаемся</h2>
+        <ul class="lists">
+          <li>
+            <img
+              src="./images/img.jpg"
+              alt="Руки на клавиатуре, планшет и часть монитора"
+              width="370"
+            />
+          </li>
+
+          <li>
+            <img
+              src="./images/img6.jpg"
+              alt="В левой руке мобильный телефон, правая рука на тачпаде ноутбука. Ноутбук, на экране которого макеты разметки для мобильного телефона"
+              width="370"
+            />
+          </li>
+
+          <li>
+            <img
+              src="./images/img1.jpg"
+              alt="Левая рука, в которой планшет, на экране которого цветовая палитра"
+              width="370"
+            />
+          </li>
+        </ul>
+      </section>
+
+      <!-- Секция команда. Карточки сотрудников -->
+      <section class="team-cards">
+        <h2 class="heading">Наша команда</h2>
+
+        <ul class="lists">
+          <li>
+            <img src="./images/img2.jpg" alt="Игорь Демьяненко" width="270" />
+            <h3 class="cards-title">Игорь Демьяненко</h3>
+            <p class="cards-text" lang="en">Product Designer</p>
+          </li>
+
+          <li>
+            <img src="./images/img3.jpg" alt="Ольга Репина" width="270" />
+            <h3 class="cards-title">Ольга Репина</h3>
+            <p class="cards-text" lang="en">Frontend Developer</p>
+          </li>
+
+          <li>
+            <img src="./images/img4.jpg" alt="Николай Тарасов" width="270" />
+            <h3 class="cards-title">Николай Тарасов</h3>
+            <p class="cards-text" lang="en">Marketing</p>
+          </li>
+
+          <li>
+            <img src="./images/img5.jpg" alt="Михаил Ермаков" width="270" />
+            <h3 class="cards-title">Михаил Ермаков</h3>
+            <p class="cards-text" lang="en">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <!-- Лого -->
+      <a class="link logo" href="./index.html" lang="en">
+        Web<span class="logo-footer">Studio</span>
+      </a>
+
+      <!-- адрес -->
+      <address>
+        <p class="text footer-text">г. Киев, пр-т Леси Украинки, 26</p>
+
+        <!-- Почта и телефон -->
+        <ul class="lists">
+          <li>
+            <a class="link footer-link" href="mailto:info@devstudio.com">
+              info@devstudio.com
+            </a>
+          </li>
+          <li>
+            <a class="link footer-link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </address>
+    </footer>
+  </body>
 </html>
