--- a/index.html
+++ b/index.html
@@ -9,7 +9,46 @@
   </head>
   <body>
     <main>
-      <p>Студия</p>
+      <div class="container">
+        <section>
+          <h4>Choose only one value</h4>
+          <form action="javascript:void(0);" id="id-radio">
+            <div>
+              <label for="id-red">red</label>
+              <label for="id-green">green</label>
+              <label for="id-blue">blue</label>
+              <label for="id-black">black</label>
+            </div>
+            <div>
+              <input id="id-red" name="colors" type="radio" value="red" />
+              <input id="id-green" name="colors" type="radio" value="green" />
+              <input id="id-blue" name="colors" type="radio" value="blue" />
+              <input id="id-black" name="colors" type="radio" value="black" />
+            </div>
+          </form>
+          <button form="id-radio" type="submit">Submit</button>
+          <button form="id-radio" type="reset">Reset</button>
+        </section>
+        <section>
+          <h4>Choose multiple values</h4>
+          <form action="javascript:void(0);" id="id-checkbox">
+            <div>
+              <label for="red">red</label>
+              <label for="green">green</label>
+              <label for="blue">blue</label>
+              <label for="black">black</label>
+            </div>
+            <div>
+              <input id="red" name="colors" type="checkbox" value="red" />
+              <input id="green" name="colors" type="checkbox" value="green" />
+              <input id="blue" name="colors" type="checkbox" value="blue" />
+              <input id="black" name="colors" type="checkbox" value="black" />
+            </div>
+          </form>
+          <button form="id-checkbox" type="submit">Submit</button>
+          <button form="id-checkbox" type="reset">Reset</button>
+        </section>
+      </div>
     </main>
   </body>
 </html>
