--- a/index.html
+++ b/index.html
@@ -9,23 +9,31 @@
   </head>
   <body>
     <main>
-      <form class="js-speaker-form">
-        <label class="form-label"
-          ><span class="form-label-text">Подпишитесь на рассылку</span>
-          <input
-            class="form-input"
-            type="email"
-            name="email"
-            placeholder="E-mail"
-          />
-        </label>
-        <button class="btn form-btn" type="submit">
-          <span class="form-btn-text">Подписаться</span>
-          <svg class="form-icon-send">
-            <use href="./images/icons.svg#send"></use>
+      <ul>
+        <li>
+          <svg class="icon"><use href="./images/icons.svg#envelope"></use></svg>
+        </li>
+        <li>
+          <svg class="icon">
+            <use href="./images/icons.svg#smartphone"></use>
           </svg>
-        </button>
-      </form>
+        </li>
+        <li>
+          <svg class="clock">
+            <use href="./images/icons.svg#clock"></use>
+          </svg>
+        </li>
+        <li>
+          <svg class="icon">
+            <use href="./images/icons.svg#close"></use>
+          </svg>
+        </li>
+        <li>
+          <svg class="icon">
+            <use href="./images/icons.svg#person"></use>
+          </svg>
+        </li>
+      </ul>
     </main>
   </body>
 </html>
