--- a/index.html
+++ b/index.html
@@ -9,31 +9,14 @@
   </head>
   <body>
     <main>
-      <ul>
-        <li>
-          <svg class="icon"><use href="./images/icons.svg#envelope"></use></svg>
-        </li>
-        <li>
-          <svg class="icon">
-            <use href="./images/icons.svg#smartphone"></use>
-          </svg>
-        </li>
-        <li>
-          <svg class="clock">
-            <use href="./images/icons.svg#clock"></use>
-          </svg>
-        </li>
-        <li>
-          <svg class="icon">
-            <use href="./images/icons.svg#close"></use>
-          </svg>
-        </li>
-        <li>
-          <svg class="icon">
-            <use href="./images/icons.svg#person"></use>
-          </svg>
-        </li>
-      </ul>
+      <div class="div">
+        <div class="div2">
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam,
+            obcaecati?
+          </p>
+        </div>
+      </div>
     </main>
   </body>
 </html>
