--- a/index.html
+++ b/index.html
@@ -1,154 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <<link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
-</head>
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+    />
+    <link rel="stylesheet" href="/css/styles.css" />
+  </head>
 
-<body>
-    <header class="header">
-        <div class="container header-container">
-            <a class="logo" href="">
-                <span class="slogan">Web</span><span class="second-slogan">Studio</span>
-            </a>
-            <nav class="header-nav">
-                <ul class="site-nav">
-                    <li class="item"><a class="link" href="/">Cтудия</a></li>
-                    <li class="item"><a class="link" href="/portfolio.html">Портфолио</a></li>
-                    <li class="item"><a class="link" href="/">Контакты</a></li>
-                </ul>
-            </nav>
-            <ul class="auth-nav">
-                <li class="item"><a class="second-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="item"><a class="second-link" href="tel:+380961111111">+380961111111</a></li>
-            </ul>
-        </div>
-
-    </header>
+  <body>
     <main>
-        <!-- Заказать услугу -->
-
-        <section class="hero">
-            <div class="container">
-                <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-                <button class="hero-buttons" type="button">Заказать услугу</button>
-        </section>
-        <!-- Наша особенность -->
-        <section class="container">
-            <ul class="subtitle">
-                <li class="item">
-                    <h3 class="subtitle-item">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-                    <p class="text-item">Идейные соображения, а также начало повседневной работы по формированию
-                        позиции.
-                    </p>
-                </li class="item">
-                <li class="item">
-                    <h3 class="subtitle-item">ПУНКТУАЛЬНОСТЬ</h3>
-                    <p class="text-item">
-                        Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-                    </p>
-                </li class="item">
-                <li class="item">
-                    <h3 class="subtitle-item">ПЛАНИРОВАНИЕ</h3>
-                    <p class="text-item">
-                        Равным образом консультация с широким активом в значительной степени обуславливает.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="subtitle-item">СОВРЕМЕННІЕ ТЕХНОЛОГИИ</h3>
-                    <p class="text-item">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                    </p>
-                </li>
-            </ul>
+      <section class="customer__reviews">
+        <div class="container swiper-container">
+          <div class="swiper">
+            <div class="customer__wrapper swiper-wrapper">
+              <div class="wrapper__swiper swiper-slide">
+                <article class="wrapper__card">
+                  <div class="customer__image-thumb">
+                    <img src="./images/customer-1.jpg" alt="" />
+                  </div>
+                  <div class="customer__review">
+                    <div class="review__text-thumb">
+                      <p class="review__text">
+                        Nullam viverra consectetuer. Quisque cursus et,
+                        porttitor risus. Aliquam sem. In hendrerit nulla quam
+                        nunc, accumsan congue. Lorem ipsum primis in nibh vel
+                        risus.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="after__text">
+                    <p class="customer__name">Emily, Los Angeles</p>
+                  </div>
+                </article>
+              </div>
+              <div class="wrapper__swiper swiper-slide">
+                <article class="wrapper__card">
+                  <div class="customer__image-thumb">
+                    <img src="./images/customer-1.jpg" alt="" />
+                  </div>
+                  <div class="customer__review">
+                    <div class="review__text-thumb">
+                      <p class="review__text">
+                        Nullam viverra consectetuer. Quisque cursus et,
+                        porttitor risus. Aliquam sem. In hendrerit nulla quam
+                        nunc, accumsan congue. Lorem ipsum primis in nibh vel
+                        risus.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="after__text">
+                    <p class="customer__name">Emily, Los Angeles</p>
+                  </div>
+                </article>
+              </div>
+              <div class="wrapper__swiper swiper-slide">
+                <article class="wrapper__card">
+                  <div class="customer__image-thumb">
+                    <img src="./images/customer-1.jpg" alt="" />
+                  </div>
+                  <div class="customer__review">
+                    <div class="review__text-thumb">
+                      <p class="review__text">
+                        Nullam viverra consectetuer. Quisque cursus et,
+                        porttitor risus. Aliquam sem. In hendrerit nulla quam
+                        nunc, accumsan congue. Lorem ipsum primis in nibh vel
+                        risus.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="after__text">
+                    <p class="customer__name">Emily, Los Angeles</p>
+                  </div>
+                </article>
+              </div>
             </div>
-        </section>
-        <!-- Чем мы занимаемся -->
-        <section>
-            <div class="container">
-                <h2 class="title">Чем мы занимаемся</h2>
-                <ul class="title-item">
-                    <li class="title-img">
-                        <img src="/img/planning.jpg" alt="Планирование" width="370" />
-                    </li>
-                    <li class="title-img">
-                        <img src="/img/Punctuality.jpg" alt="Пунктуальность" width="370" />
-                    </li>
-                    <li class="title-img">
-                        <img src="/img/technologies.jpg" alt="Современные технологии" width="370" />
-                    </li>
-                </ul>
-            </div>
-        </section>
-        <!-- Наша команда -->
-        <section>
-            <div class="container">
-                <h2 class="title">Наша команда</h2>
-                <ul class="pre-title">
-                    <li class="pre-title-img">
-                        <img src="/img/Product_Designer.jpg" alt="Product Designer" width="270" />
-                        <h3 class="second-title">Игорь Демьяненко</h3>
-                        <p class="text">Product Designer</p>
-
-                    </li>
-                    <li class="pre-title-img">
-                        <img src="/img/Frontend_Developer.jpg" alt="Frontend Developer" width="270" />
-                        <h3 class="second-title">Ольга Репина</h3>
-                        <p class="text">Frontend Developer</p>
-
-                    </li>
-                    <li class="pre-title-img">
-                        <img src="/img/Marketing.jpg" alt="Marketing" width="270" />
-                        <h3 class="second-title">Николай Тарасов</h3>
-                        <p class="text">Marketing</p>
-
-                    </li>
-                    <li class="pre-title-img">
-                        <img src="/img/UI_Designer.jpg" alt="Designer" width="270" />
-                        <h3 class="second-title">Михаил Ермаков</h3>
-                        <p class="text">UI Designer</p>
-
-                    </li>
-                </ul>
-            </div>
-        </section>
-    </main>
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <address class="footer-main">
-                <div class="footer-link">
-                    <a class="footer-link-one" href="">
-                        <span class="slogan">Web</span><span class="slogan-footer">Studio</span>
-                    </a>
-                </div>
-                <ul class="footer-adrees">
-                    <li class="footer-item">
-                        <a class="address" href="/">г.Киев,пр-т Леси Украинки,26</a>
-                    </li>
-                    <li class="footer-item">
-                        <a class="second-address" href="malito:info@example.com">info@example.com</a>
-                    </li>
-                    <li class="footer-item">
-                        <a class="second-address" href="tel:+380991111111">+380991111111
-                        </a>
-                    </li>
-                </ul>
-            </address>
+            <div class="swiper-pagination"></div>
+          </div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
         </div>
-    </footer>
-</body>
-
+      </section>
+    </main>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <script src="js/swiper.js"></script>
+  </body>
 </html>
